--- a/acronyms.tex
+++ b/acronyms.tex
@@ -50,3 +50,6 @@
 \newacronym{RAL}{RAL}{Rutherford Appleton Laboratory}
 \newacronym{DAQ}{DAQ}{Data Acquisition System}
 \newacronym{OAP}{OAP}{off-axis parabolic mirror}
+\newacronym{HDF5}{HDF5}{Hierarchical Data Format 5}
+\newacronym{EPICS}{EPICS}{Experimental Physics and Industrial Control System}
+\newacronym{GUI}{GUI}{Graphical User Interface}
