--- a/template.tex
+++ b/template.tex
@@ -19,6 +19,7 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass[11pt, onehalf, phd]{osudiss-2} 
+% Look at \DeclareOption in osudiss-2.cls for options to change oneside to twoside etc.
 % The `11pt' option is unnecessary since it is the default
 
 % `onehalf' sets the line spacing to one-and-a-half spacing instead of
